Fixed mobile-overflow

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,9 @@ body {
     color: #00252e;
     overflow-x: hidden;
 }
+body>* {
+    overflow-x: hidden;
+}
 a, a:hover, a:focus {
     text-decoration: none;
     color: inherit;
